--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   app:
     build:
@@ -8,8 +6,8 @@ services:
     container_name: esg-energia-app
     environment:
       - SPRING_DATASOURCE_URL=jdbc:oracle:thin:@oracle.fiap.com.br:1521:ORCL
-      - SPRING_DATASOURCE_USERNAME=***REMOVED***
-      - SPRING_DATASOURCE_PASSWORD=***REMOVED***
+      - SPRING_DATASOURCE_USERNAME=RM559684
+      - SPRING_DATASOURCE_PASSWORD=250901
       - JWT_SECRET=c3VhLWNoYXZlLXNlY3JldGEtbXVpdG8tc2VndXJhLWNvbS1uby1taW5pbW8tMjU2LWJpdHMtcGFyYS1oczI1Ng==
     ports:
       - "8080:8080"
