--- a/src/main/resources/application-local-docker.yml
+++ b/src/main/resources/application-local-docker.yml
@@ -4,12 +4,12 @@
 
 spring:
   datasource:
-    url: jdbc:oracle:thin:@localhost:1521:XE
-    username: appuser
-    password: appsecret
+    url: ${SPRING_DATASOURCE_URL:jdbc:oracle:thin:@localhost:1521:XE}
+    username: ${SPRING_DATASOURCE_USERNAME:appuser}
+    password: ${SPRING_DATASOURCE_PASSWORD:appsecret}
   
   flyway:
-    schemas: APPUSER
+    schemas: ${SPRING_DATASOURCE_USERNAME:APPUSER}
   
   jpa:
     show-sql: true
